チェックイン一覧API オカズリンクを含むチェックインのみ取得するオプションを追加
